feat: add global configuration modal for Oh-My-OpenCode
- Implemented OhMyOpenCodeGlobalConfigModal component for managing global settings.
- Integrated global config modal into OhMyOpenCodeSettings component.
- Added API functions to fetch and save global configuration.
- Enhanced OpenCodePage to support editing of other unknown configuration fields.
- Updated types to include global configuration and experimental features.
- Improved localization for new configuration options and hints.

--- a/web/i18n/locales/en-US.json
+++ b/web/i18n/locales/en-US.json
@@ -316,35 +316,53 @@
       "disabled": "Disabled",
       "jsonConfig": "JSON Configuration",
       "jsonPlaceholder": "{\n  \"type\": \"local\",\n  \"command\": [\"npx\", \"-y\", \"your-mcp-package\"],\n  \"enabled\": true\n}",
-      "jsonHint": "Supports type(local/remote), command(array), url, enabled fields",
+      "jsonHint": "Supports fields like type (local/remote), command (array), url, enabled, etc.",
+      "invalidJson": "Invalid JSON format"
+    },
+    "otherConfig": {
+      "title": "Other Configuration",
+      "hint": "Edit other unknown fields in OpenCode config (custom fields, experimental features, etc.). Changes will be automatically saved to the config file.",
       "invalidJson": "Invalid JSON format"
     },
     "ohMyOpenCode": {
-      "title": "oh-my-opencode Configuration",
-      "configLabel": "oh-my-opencode Config",
-      "configHint": "Quickly switch Agent model configuration schemes",
+      "title": "Oh-My-OpenCode Configuration",
+      "configLabel": "Oh-My-OpenCode Sub-Agent Config",
+      "configHint": "Sub-agents handle specific tasks like architecture, code search, etc.",
       "configSelected": "Configuration applied",
       "addConfig": "Add Config",
       "editConfig": "Edit Config",
+      "globalConfig": "Common Config",
+      "globalConfigTitle": "Oh-My-OpenCode Global Configuration",
       "configName": "Config Name",
       "configNamePlaceholder": "e.g., Budget Config",
       "configId": "Config ID",
       "configIdPlaceholder": "Enter config ID",
       "configIdHint": "Auto-generated",
       "agentModels": "Agent Model Configuration",
+      "agentModelsHint": "Specify the model for each Agent. Leave empty to use Oh-My-OpenCode defaults.",
       "selectModel": "Select or enter model",
-      "sisyphusSettings": "Sisyphus Settings",
+      "sisyphusSettings": "Sisyphus Agent Settings",
       "sisyphusDisabled": "Disable Sisyphus",
       "defaultBuilderEnabled": "Enable Default Builder",
       "plannerEnabled": "Enable Planner",
       "replacePlan": "Replace Default Plan",
-      "disabledItems": "Disabled Items",
+      "disabledItems": "Disabled Items Settings",
       "disabledAgents": "Disabled Agents",
-      "disabledAgentsPlaceholder": "Select disabled agents",
+      "disabledAgentsPlaceholder": "Select agents to disable",
       "disabledMcps": "Disabled MCPs",
-      "disabledMcpsPlaceholder": "One MCP name per line",
+      "disabledMcpsPlaceholder": "Select MCPs to disable (e.g., context7, grep_app)",
       "disabledHooks": "Disabled Hooks",
-      "disabledHooksPlaceholder": "One hook name per line",
+      "disabledHooksPlaceholder": "Enter hook names to disable",
+      "lspSettings": "LSP Configuration",
+      "lspConfig": "LSP Server Configuration",
+      "lspConfigHint": "Configure LSP servers. See official documentation for details.",
+      "experimentalSettings": "Experimental Features",
+      "experimentalConfig": "Experimental Configuration",
+      "experimentalConfigHint": "Experimental features may change in future versions. Use with caution.",
+      "otherFields": "Other Configuration",
+      "otherFieldsHint": "Custom configuration fields that will be flattened and written to the top level of oh-my-opencode.json. When switching profiles, the Agents Profile fields will be deeply merged and override the global config's fields with the same name.",
+      "otherFieldsGlobalHint": "Global other configuration, used as base configuration. Will be deeply merged and overridden by Agents Profile configuration when switching.",
+      "invalidJson": "Invalid JSON format",
       "applied": "Applied",
       "apply": "Apply",
       "applySuccess": "Config applied to file",
