--- a/web/i18n/locales/zh-CN.json
+++ b/web/i18n/locales/zh-CN.json
@@ -319,33 +319,50 @@
       "jsonHint": "支持 type(local/remote)、command(数组)、url、enabled 等字段",
       "invalidJson": "JSON 格式不正确"
     },
+    "otherConfig": {
+      "title": "其他配置",
+      "hint": "此处可编辑 OpenCode 配置中的其他未知字段（如自定义字段、实验性功能等）。修改后会自动保存到配置文件。",
+      "invalidJson": "JSON 格式不正确"
+    },
     "ohMyOpenCode": {
-      "title": "oh-my-opencode 配置管理",
-      "configLabel": "oh-my-opencode 配置",
-      "configHint": "快速切换 Agent 模型配置方案",
+      "title": "Oh-My-OpenCode 配置管理",
+      "configLabel": "Oh-My-OpenCode 子 Agent 配置",
+      "configHint": "子 Agent 负责特定任务，如架构设计、代码搜索等",
       "configSelected": "配置已应用",
-      "title": "oh-my-opencode 配置",
       "addConfig": "添加配置",
       "editConfig": "编辑配置",
+      "globalConfig": "通用配置",
+      "globalConfigTitle": "Oh-My-OpenCode 全局配置",
       "configName": "配置名称",
       "configNamePlaceholder": "如：省钱配置",
       "configId": "配置 ID",
       "configIdPlaceholder": "输入配置 ID",
       "configIdHint": "系统自动生成",
       "agentModels": "Agent 模型配置",
+      "agentModelsHint": "为每个 Agent 指定使用的模型。留空则使用 Oh-My-OpenCode 默认模型。",
       "selectModel": "选择或输入模型",
-      "sisyphusSettings": "Sisyphus 设置",
+      "sisyphusSettings": "Sisyphus Agent 设置",
       "sisyphusDisabled": "禁用 Sisyphus",
       "defaultBuilderEnabled": "启用默认 Builder",
       "plannerEnabled": "启用 Planner",
       "replacePlan": "替换默认 Plan",
-      "disabledItems": "禁用项",
+      "disabledItems": "禁用项设置",
       "disabledAgents": "禁用的 Agents",
-      "disabledAgentsPlaceholder": "选择禁用的 Agent",
+      "disabledAgentsPlaceholder": "选择要禁用的 Agent",
       "disabledMcps": "禁用的 MCPs",
-      "disabledMcpsPlaceholder": "每行一个 MCP 名称",
+      "disabledMcpsPlaceholder": "选择要禁用的 MCP（如 context7, grep_app）",
       "disabledHooks": "禁用的 Hooks",
-      "disabledHooksPlaceholder": "每行一个 Hook 名称",
+      "disabledHooksPlaceholder": "输入要禁用的 Hook 名称",
+      "lspSettings": "LSP 配置",
+      "lspConfig": "LSP 服务器配置",
+      "lspConfigHint": "配置 LSP 服务器，详见官方文档",
+      "experimentalSettings": "实验性功能",
+      "experimentalConfig": "实验性配置",
+      "experimentalConfigHint": "实验性功能可能会在未来版本中变更，谨慎使用",
+      "otherFields": "其他配置",
+      "otherFieldsHint": "自定义配置字段，将平铺写入 oh-my-opencode.json 文件顶层。切换配置时，Agents Profile 的字段会深度合并并覆盖全局配置的同名字段。",
+      "otherFieldsGlobalHint": "全局其他配置，作为基础配置。切换 Agents Profile 时会被其配置深度合并覆盖。",
+      "invalidJson": "JSON 格式不正确",
       "applied": "已应用",
       "apply": "应用",
       "applySuccess": "配置已应用到文件",
