feat(ui): redesign sidebar with light theme and update documentation links
- Redesign MainLayout sidebar with glassmorphism effect (blur, transparency, shadows)
- Change dark theme to light theme with rgba colors and proper contrast
- Update documentation links from Button to Link components for better UX
- Add documentation links to OhMyOpenCode settings page
- Fix Ant Design v5 API compatibility in config components (bodyStyle -> styles)
- Bump version to 0.1.6

--- a/web/i18n/locales/en-US.json
+++ b/web/i18n/locales/en-US.json
@@ -172,7 +172,7 @@
     "title": "OpenCode Configuration",
     "configPath": "Configuration File Path",
     "openFolder": "Open Folder",
-    "viewDocs": "View Documentation",
+    "viewDocs": "Documentation",
     "syncFromSettings": "Sync from Settings",
     "addProvider": "Add Provider",
     "editProvider": "Edit Provider",
@@ -327,6 +327,7 @@
     },
     "ohMyOpenCode": {
       "title": "Oh-My-OpenCode Configuration",
+      "docs": "Documentation",
       "configLabel": "Oh-My-OpenCode Sub-Agent Config",
       "configHint": "Sub-agents handle specific tasks like architecture, code search, etc.",
       "configSelected": "Configuration applied",
@@ -385,7 +386,7 @@
     "title": "Claude Code Configuration",
     "configPath": "Configuration File Path",
     "openFolder": "Open Folder",
-    "viewDocs": "View Documentation",
+    "viewDocs": "Documentation",
     "applyConfig": "Apply Configuration",
     "addProvider": "Add Provider",
     "importFromOpenCode": "Import from OpenCode",
