--- a/web/i18n/locales/zh-CN.json
+++ b/web/i18n/locales/zh-CN.json
@@ -172,7 +172,7 @@
     "title": "OpenCode 配置管理",
     "configPath": "配置文件路径",
     "openFolder": "打开文件夹",
-    "viewDocs": "查看官方文档",
+    "viewDocs": "官方文档",
     "syncFromSettings": "从设置同步",
     "addProvider": "添加供应商",
     "editProvider": "编辑供应商",
@@ -327,6 +327,7 @@
     },
     "ohMyOpenCode": {
       "title": "Oh-My-OpenCode 配置管理",
+      "docs": "官方文档",
       "configLabel": "Oh-My-OpenCode 子 Agent 配置",
       "configHint": "子 Agent 负责特定任务，如架构设计、代码搜索等",
       "configSelected": "配置已应用",
@@ -385,7 +386,7 @@
     "title": "Claude Code 配置管理",
     "configPath": "配置文件路径",
     "openFolder": "打开文件夹",
-    "viewDocs": "查看官方文档",
+    "viewDocs": "官方文档",
     "applyConfig": "应用配置",
     "addProvider": "添加供应商",
     "importFromOpenCode": "从 OpenCode 导入",
