feat(skills): add system tray integration for quick skills management
- Add tray menu support to display and manage skills directly from system tray
- Implement show_skills_in_tray setting with toggle in Skills Settings
- Create TraySkillData API for fetching skills and their sync states
- Handle skill tool toggle events from tray menu with instant sync
- Refactor error handling and sync logic into reusable utility modules
- Integrate tray refresh calls across skills management components
- Add new default skills repo for discovery (nextlevelbuilder/ui-ux-pro-max-skill)

--- a/web/i18n/locales/en-US.json
+++ b/web/i18n/locales/en-US.json
@@ -904,6 +904,8 @@
     "sortByUpdated": "Sort by Updated",
     "skillsStoragePath": "Skills Storage Path",
     "skillsStorageHint": "Central location where all Skills are stored",
+    "showInTray": "Show in Quick Menu",
+    "showInTrayHint": "Display Skills in the system tray quick menu for fast sync toggle",
     "storagePath": "Storage Path",
     "selectStoragePath": "Select Storage Path",
     "selectLocalFolder": "Select Skill Folder",
