feat: add WSL sync warnings and WebDAV namespace fix
This commit introduces several improvements across the application:

- **WSL Sync Warning System**: Added a warning notification system for WSL MCP sync operations. When sync operations fail or are skipped (due to parse errors, file mapping issues, or other errors), users now receive contextual warning messages in the UI instead of silent failures.

- **WebDAV Namespace Compatibility**: Fixed backup listing to support case-insensitive XML namespace prefixes. This resolves compatibility with WebDAV providers like 坚果云 (Jianguoyun) that use lowercase `<d:response>` tags instead of the standard uppercase `<D:response>`.

- **Provider Form UX**: Added dynamic placeholder examples for the Base URL field that adapt based on the selected provider type, helping users configure API endpoints correctly.

- **Skill Discovery**: Added support for scanning extra skill directories from third-party skill stores (e.g., CC Switch at `~/.cc-switch/skills`).

- **Version**: Bumped version from 0.4.4 to 0.4.5

--- a/web/i18n/locales/en-US.json
+++ b/web/i18n/locales/en-US.json
@@ -366,6 +366,7 @@
       "npmPlaceholder": "Select AI SDK package type",
       "baseURL": "Base URL",
       "baseURLPlaceholder": "API base URL",
+      "baseURLExample": "e.g.",
       "baseUrlHint": "Make sure the URL ends with /v1 (if required)",
       "baseUrlConfirmV1": "The current Base URL does not end with /v1. This provider type typically requires this suffix. Are you sure you want to use this configuration?",
       "baseUrlConfirmV1Beta": "The current Base URL does not end with /v1 or /v1beta. This provider type typically requires this suffix. Are you sure you want to use this configuration?",
